@@ -1762,7 +1762,6 @@ str SRVsetServers(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str STRBytes(int *res, const str *arg1);
 str STRConcat(str *res, const str *val1, const str *val2);
 str STRFromWChr(str *res, const int *at);
-str STRIconv(str *res, const str *o, const str *fp, const str *tp);
 str STRLength(int *res, const str *arg1);
 str STRLower(str *res, const str *arg1);
 str STRLpad(str *res, const str *arg1, const int *len);
@@ -1826,7 +1825,6 @@ str STRbatstrSearchcst(bat *ret, const bat *l, const str *cst);
 str STRbatstringLength(bat *ret, const bat *l);
 str STRbatsubstring(bat *ret, const bat *l, const bat *r, const bat *t);
 str STRbatsubstringcst(bat *ret, const bat *bid, const int *start, const int *length);
-str STRcodeset(str *res);
 str STRinsert(str *ret, const str *s, const int *start, const int *l, const str *s2);
 str STRlikewrap(bit *ret, const str *s, const str *pat, const str *esc);
 str STRlikewrap2(bit *ret, const str *s, const str *pat);
