@@ -1,6 +1,10 @@
 # ChangeLog file for MonetDB5
 # This file is updated with Maddlog
 
+* Mon Oct 26 2015 Sjoerd Mullender <sjoerd@acm.org>
+- Removed functions str.iconv and str.codeset.  Internally, strings are
+  always in UTF-8 encoding, so we can't allow code set conversions.
+
 * Wed Oct  7 2015 Sjoerd Mullender <sjoerd@acm.org>
 - Removed algerbra.like with a BAT argument.  Use algebra.likesubselect
   instead.
